# leet-info-graph-gpt-5.2-codex-v2

./: README.md  goals.md  task.md
.leet/: .todos.done.json  .todos.json
backend/: pyproject.toml
backend/infograph/: __init__.py
backend/src/infograph/: settings.py
backend/src/infograph/core/schemas/: infographic.py  message.py  research_session.py  source.py  user.py
backend/src/infograph/services/: __init__.py  auth_service.py  infographic_service.py  search_service.py
backend/src/infograph/stores/: abstract_infographic_store.py  abstract_message_store.py  abstract_session_store.py  abstract_source_store.py  abstract_user_store.py
backend/src/infograph/stores/duckdb/: duckdb_client.py  infographic_store_duckdb.py  message_store_duckdb.py  session_store_duckdb.py  source_store_duckdb.py  user_store_duckdb.py
backend/src/infograph/svc/: api_router_base.py  api_service.py  auth.py  main.py
backend/src/infograph/svc/api/v1/: api.py
backend/src/infograph/svc/api/v1/routers/: auth_router.py  health_router.py  infographic_router.py  session_router.py  source_router.py
backend/tests/: conftest.py  test_auth_router.py  test_health_router.py  test_infographic_router.py  test_infographic_service.py  test_search_service.py  test_session_router.py  test_source_router.py
backend/tests/test_stores/: test_infographic_store.py  test_message_store.py  test_session_store.py  test_source_store.py  test_user_store.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  health.js  session.js  source.js
(+22 files in other folders)
