[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infograph"
version = "0.1.0"
description = "Research Infograph Assistant backend"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "duckdb>=0.10",
]

[project.optional-dependencies]
test = ["pytest>=7.4", "httpx>=0.26"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
